# turing-test

./: already_asked.py  clarence.py  enjoy.py  errors.py  gpt3.py  handlers.py  keywords.py  loop.py  main.py  not.py  plan.txt  priority.py  prompt.py  pyproject.toml  q.py  query.py  question_handlers.py  questions.py  readme.md  response.py  responseQs.py  synonyms.py  template.py  text.py
depreciated/: query.py
pseudocode and plan/: clarencePseudo  enjoyPseudo  errorsPseudo  loopPseudo  plan.txt
word_lists/: qtypes.txt
