[tool.poetry]
name = "the-turing-test-l5csy-djh-4"
version = "0.1.0"
description = ""
authors = ["virgile-ae <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
